--- a/Demo01/appsettings.json
+++ b/Demo01/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=.;Database=Session20;Trusted_Connection=yes;"
+    "DefaultConnection": "Server=.;Database=identityDemo01;Trusted_Connection=yes;"
 
   },
   "Logging": {
